# goodies

./: .gitignore  README.md
browser-scripts/: copy-jira-description.user.js
browser-token-sniffer/: intercept-bryter-tokens.user.js  intercept-stackrox-tokens.user.js
cpp-compiler-tests/: c++-inner-class-test.cpp  polymorphism.cpp  type_traits_test.cpp  void-check-0.cc  void-check-1.cc  void-check-2.cc  void-check-3.cc  void-check.cc
cpp-server/: CMakeLists.txt  CMakeLists.txt.in  main.cpp  socket.cpp  threadpool.hpp  worker.cpp  worker.hpp
cpp-server/src/: latch.hpp  main.cpp  socket.hpp  threadpool.cpp  threadpool.hpp  worker.cpp  worker.hpp
cpp-server/test/: test_main.cpp  threadpool_test.cpp  worker_test.cpp
die-hard-server/: die-hard-server.py
dockers/: README.md
dockers/mesos/centos7-gcc4.4/: Dockerfile
dockers/mesos/ubuntu14.04+eggs/: Dockerfile
euler/: project_euler.cpp
git-stats-scripts/: git-contributors-impact.py
http-stream-test/: README.md  http-stream-test.go
lanceur/: README.md  lanceur.py
mem-eater/: mem-eater.cpp  mem-eater.py
merlin-roster/: merlin-roster.html  merlin-roster.user.js
mesos-perf-trace/: grab-perf-trace.sh
signal-trapping/: trap_script.sh  trap_script_simple.sh
sql/: V94__external_id_to_uuid_conversion_functions.sql  find-integration-references.sql  find-stale-integrations.sql
tcp-half-open-test/: CMakeLists.txt
tcp-half-open-test/src/: tcp_connect.cpp
unresponsive-http-server/: no-response-server.py
unresponsive-process/: Dockerfile  Makefile  README.md
unresponsive-process/src/: unresponsive_process.cpp
vilfredomesos/: README.md  framework.py  pareto_executor.py
